
    Filter all of fuse as network based since there's no way for us to know
    if the thing is local or not #118552 by Pete Ezzo.'

  13 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Added warning to modules.autoload.d files stating that it's a bad idea
    to put modules there that trigger hotplug events which in turn start
    services, #118419.

  12 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Interactive start is now controllable by RC_INTERACTIVE="yes" and will
    probe to see if we can go interactive.

    Interactive start should now work on Sparc, #104067.

  11 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    runscript.sh now traps interrupt signals and rolls back its status to what
    it was when before it started.

    bonding module now supports space seperated and array variables, #118590.

    start-stop-daemon now waits for upto 1 second if it returns 0 and we
    don't have a valid process.

    A more user friendly message is reported when an interface does not exist.

  10 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Removed runlevel dependancies from runscript.sh as they're now in rc.
    
    runscript.sh now has much better locking, #118418.

    We now store services to restart when we end up as inactive from a restart
    or we were stopped with IN_BACKGROUND=true, #112088.

    We no longer stop and start services already running on runlevel change if
    they're in the runlevel we're changing too.

    We can now wait_sevice on services started outside of rc.

    rc-status now reports "Could not locate" instead of "Could not local",
    thanks to Christian Heim.

  09 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Ensure that specific configuration is loaded after net, #118368.

    iwconfig now supports multiple iwconfig_* and iwpriv_* statements and is
    also configurable for specific ESSIDs. This allows use to use the inbuilt
    WPA support in the rt2500 driver.
